<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:scrollbars="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_4sdp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_4sdp"
                app:cardCornerRadius="@dimen/_4sdp">

                <ImageView
                    android:id="@+id/d_flag_Image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_180sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center"
                    android:src="@drawable/flag" />

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="10"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:alpha="0.5"
                    android:fontFamily="cursive"
                    android:gravity="center|left"
                    android:text="@string/country_name"

                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/d_country_Name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:alpha="0.4"

                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="left"
                    android:text="@string/pakistan"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_10sdp"

                    android:textStyle="bold">

                </TextView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="10"
                android:gravity="center"
                android:orientation="horizontal"

                android:padding="@dimen/_5sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:alpha="0.5"
                    android:fontFamily="cursive"
                    android:gravity="center|left"
                    android:text="Capital Name "

                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/d_country_Capital"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:alpha="0.4"

                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="left"
                    android:text="@string/islamabd"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_10sdp"

                    android:textStyle="bold">

                </TextView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="10"
                android:gravity="center"
                android:orientation="horizontal"

                android:padding="@dimen/_5sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:alpha="0.5"
                    android:fontFamily="cursive"
                    android:gravity="center|left"
                    android:text="@string/letter_country_code"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/d_letter_country_Code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:alpha="0.4"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="left"
                    android:text="@string/pk"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="10"
                android:gravity="center"
                android:orientation="horizontal"

                android:padding="@dimen/_5sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:alpha="0.5"
                    android:fontFamily="cursive"
                    android:gravity="center|left"
                    android:text="@string/region"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/d_country_Region"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:alpha="0.4"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="left"
                    android:text="@string/asia"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</RelativeLayout>