<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_5sdp"
        android:alpha="0.7"
        app:cardCornerRadius="@dimen/_16sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/scania"
                app:civ_border_color="@android:color/holo_red_dark"
                app:civ_border_width="2dp" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/Scania"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_30sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:gravity="center|top"
                android:text="@string/About_Scania"
                android:textAlignment="center"
                android:textFontWeight="@integer/material_motion_duration_long_1"
                android:textStyle="bold|italic" />


            <Button
                android:id="@+id/letStart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_gravity="bottom"

                android:drawableRight="@drawable/go"
                android:gravity="center"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_20sdp"
                android:text="@string/let_s_start"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>